# X25519-React-Native-Module

./: .gitignore  README.md  package.json  tsconfig.json  x25519-react.podspec
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/x25519react/: X25519ReactModule.java  X25519ReactPackage.java
cpp/: x25519-react.cpp  x25519-react.h
ios/: X25519React.h  X25519React.mm
ios/X25519React.xcodeproj/: project.pbxproj
src/: index.tsx
